# rdst

./: .env.example  .gitignore  README.md  module.md  node.md  pyproject.toml
api/: app.py  (+1 more)
horizon/nile-digital-twin/: README.md  pyproject.toml
horizon/nile-digital-twin/api/: __main__.py  app.py  deps.py  stub_sim.py
horizon/nile-digital-twin/api/routes/: nodes.py  overlays.py  scenarios.py
horizon/nile-digital-twin/calibration/: calibrate.py  report.py
horizon/nile-digital-twin/data/csv/: catalog.csv  edges.csv  nodes.csv
horizon/nile-digital-twin/data/csv/era5_daily/: aswan.csv  blue_nile_to_khartoum.csv  cairo_muni.csv  delta.csv  khartoum.csv  lake_tana_outlet.csv  main_nile_to_aswan.csv  malakal.csv  merowe.csv
horizon/nile-digital-twin/data/csv/era5_land_monthly/: aswan.csv  atbara_confluence.csv  atbara_source.csv  blue_nile_to_khartoum.csv  delta.csv  egypt_ag.csv  gerd.csv  khartoum.csv  khartoum_muni.csv  lake_victoria_outlet.csv  main_nile_to_aswan.csv  merowe.csv  sudd.csv  white_nile_to_sudd.csv
horizon/nile-digital-twin/data/csv/era5_monthly/: atbara_source.csv  cairo_muni.csv  gerd.csv  gezira_irr.csv  khartoum_muni.csv  lake_victoria_outlet.csv  main_nile_to_aswan.csv  merowe.csv  sudd.csv  white_nile_to_sudd.csv
horizon/nile-digital-twin/dataloader/: __main__.py  aggregate.py  config.py  copernicus_csv.py  era5.py  forcings.py  overlays.py  penman.py  tiles.py
horizon/nile-digital-twin/demo_scenarios/: build_canned.py
horizon/nile-digital-twin/docs/: calibration-report.html  data-sources.md  pitch.md
horizon/nile-digital-twin/drafts/nile-flow-simulator/: README.md  SIMULATOR_OUTPUT_CONTRACT.md
horizon/nile-digital-twin/frontend/: index.html  package-lock.json  tsconfig.json  vite.config.ts
horizon/nile-digital-twin/frontend/src/: main.tsx  plotly-shim.d.ts
horizon/nile-digital-twin/frontend/tests/: api.test.ts  store.test.ts
horizon/nile-digital-twin/optimize/: grid_search.py
horizon/nile-digital-twin/simengine/: engine.py  forcings.py  graph.py  kpi.py  scenario.py  scoring.py
horizon/nile-digital-twin/simengine/nodes/: confluence.py  demand_irrigation.py  demand_municipal.py  reach.py  sink.py  source.py  wetland.py
horizon/nile-digital-twin/tests/: conftest.py  test_aggregate.py  test_copernicus_csv.py  test_demand_municipal.py  test_engine_mass_balance.py  test_era5.py  test_forcings.py  test_graph.py  test_health.py  test_integration_stub.py  test_kpi.py  test_nodes.py  test_nodes_route.py  test_overlays.py  test_overlays_route.py  test_penman.py  test_reach.py  test_reservoir.py  test_scenario.py  test_scenarios_route.py  test_scoring.py  test_sink.py  test_source.py  test_wetland.py
horizon/nile-digital-twin/tests/fixtures/: three_node_config.yaml  three_node_topology.json
horizon/nrsm/: Cargo.toml  README.md  SCHEMA_NOTES.md  plot.py  plot_past.py  plot_weather.py  plot_weather_half.py  plot_weather_lib.py
horizon/nrsm/contracts/: scenario.schema.yaml
horizon/nrsm/crates/nrsm-cli/: Cargo.toml
horizon/nrsm/crates/nrsm-dataloader/: Cargo.toml
horizon/nrsm/crates/nrsm-py/: Cargo.toml  README.md  pyproject.toml
horizon/nrsm/crates/nrsm-sim-core/: Cargo.toml
horizon/nrsm/docs/: dataloader-node-generation-plan.md  nile-dataloader-plan.md
horizon/nrsm/optimizer/: README.md  pyproject.toml
horizon/nrsm/optimizer/tests/: test_actions.py  test_benchmarks.py  test_objectives.py  test_pareto.py  test_results.py
horizon/nrsm/plotting/: .gitignore  README.md  pyproject.toml
horizon/nrsm/plotting/tests/: test_compare.py  test_plotting_smoke.py
horizon/nrsm/scenarios/nile-mvp/: README.md  scenario.json  scenario.yaml
horizon/nrsm/scripts/: fetch_glofas_smoke.py  plot_results.py  run_glofas_smoke_tests.py  test_fetch_glofas_smoke.py
(+888 files in other folders)
