[workspace]
members = [
    "crates/nrsm-cli",
    "crates/nrsm-dataloader",
    "crates/nrsm-sim-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[profile.dev]
debug = 0

[profile.test]
debug = 0
