[project]
name = "nrsm-plotting"
version = "0.1.0"
description = "Diagnostic plots for NRSM simulator CSV outputs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.scripts]
nrsm-plots = "nrsm_plotting.cli:main"
nrsm-plots-compare = "nrsm_plotting.compare_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
